# browser

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.githooks/: pre-push
.github/: dependabot.yml
.github/workflows/: ci.yml  claim.yml  pr-title.yml  wpt-comment.yml  wpt-issue.yml  wpt-run.yml  wpt.yml
crates/css/: CHANGELOG.md
crates/css/src/: lib.rs
crates/dom/: CHANGELOG.md  Cargo.toml
crates/dom/src/: lib.rs
crates/engine/: CHANGELOG.md  Cargo.toml
crates/engine/examples/: dump.rs  profile.rs  shot.rs
crates/engine/src/: canvas.rs  debug.rs  font.rs  input.rs  lib.rs  lifecycle.rs  painter.rs  resources.rs  scripting.rs  svg.rs  text_helpers.rs  traversal.rs  woff2.rs
crates/ffi/: CHANGELOG.md  Cargo.toml
crates/ffi/src/: lib.rs
crates/html/: CHANGELOG.md
crates/html/src/: lib.rs  xml.rs
crates/js/: CHANGELOG.md  Cargo.toml
crates/js/src/: dom_helpers.rs  eval_loop.rs  forced_layout.rs  iframe.rs  inner_text.rs  lib.rs  modules.rs  primitives.rs  runtime.rs  selector.rs  session.rs  style_query.rs  whatwg_url.rs  worker.rs
crates/js/src/bootstrap/: browser_env.js  document.js  frame_env.js  indexeddb.js  svg.js  timers.js  webcrypto.js  worker_env.js
crates/layout/: CHANGELOG.md  Cargo.toml
crates/layout/src/: block.rs  build.rs  flex.rs  float.rs  grid.rs  inline.rs  intrinsic.rs  lib.rs  sizing.rs  table.rs  types.rs
crates/lumen/: CHANGELOG.md
crates/net/: CHANGELOG.md  Cargo.toml
crates/net/src/: lib.rs
crates/paint/: CHANGELOG.md  Cargo.toml
crates/paint/src/: canvas.rs  lib.rs
crates/style/: CHANGELOG.md
crates/style/src/: cascade.rs  colors.rs  computed_style.rs  declaration.rs  lengths.rs  lib.rs  parse_props.rs  queries.rs  selector.rs  serialize.rs  values.rs  variables.rs
crates/test262-runner/: CHANGELOG.md
crates/webdriver/: CHANGELOG.md  README.md
crates/webdriver/src/: main.rs  server.rs
crates/webdriver/tests/: flow.rs
crates/wpt-runner/: README.md
crates/wpt-runner/src/: main.rs
crates/wurl/: CHANGELOG.md  Cargo.toml
crates/wurl/src/: encoding.rs  encoding_tables.rs  idna.rs  lib.rs  unicode_tables.rs
docs/: CSS-TODO.md  HTML-SUPPORT.md  TODO.md  WPT-TODO.md  running-wpt.md
include/: browser.h
packaging/: Browser.entitlements  Info.plist
scripts/: build.sh  gen-cldr-dates.py  gen-cldr-likely.py  gen-cldr-units.py  gen-encoding-tables.py  gen-numbering.py  gen-tzdata.py  gen-umalqura.py  gen-unicode-props.py  gen-unicode-tables.py  gen-units.py  run-wpt.sh  wpt-ingest.py  wpt-matrix.py  wpt-report-update.sh  wpt-report.py  wpt-run-missing.sh
swift/: Package.swift
swift/Sources/Browser/: AppDelegate.swift  Settings.swift  Tabs.swift  Views.swift  main.swift
test/: box-demo.html  css-demo.html  dom-demo.html  flex-demo.html  js-demo.html  timer-demo.html
tools/wpt/: lucid.py
