[package]
name = "engine"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
fontdue = "0.9"
paint = { path = "../paint" }
net = { path = "../net" }
html = { path = "../html" }
css = { path = "../css" }
dom = { path = "../dom" }
style = { path = "../style" }
layout = { path = "../layout" }
js = { path = "../js" }
wurl = { path = "../wurl" }
image = "0.25"
jxl-oxide = "0.12.6"
brotli = "8.0.4"

[lints]
workspace = true
