[package]
name = "js"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# The V8 JavaScript engine (Google's production engine). Walled off behind our own Runtime API
# so it can be replaced later — same pattern as net/ureq and paint/fontdue. Nothing outside this
# crate knows V8 exists. V8 gives us full JS speed + complete language support, including real
# ES modules and dynamic import.
v8 = "150"
# The real DOM, so page scripts can read and mutate the live document tree.
dom = { path = "../dom" }
# The cascade + CSS parser, so `getComputedStyle` can compute real values in-Session (the JS runs
# on its own thread while the engine is blocked, so we cannot call back into the engine; we run the
# cascade here instead). `style` depends only on `css` + `dom` — no cycle back through `js`.
style = { path = "../style" }
css = { path = "../css" }
# Box-tree + block/inline layout, so getBoundingClientRect / elementsFromPoint reflect DOM mutations
# made by script SYNCHRONOUSLY (the engine lays out on its own thread and is blocked during JS, so a
# fresh element would otherwise have no rect until the next engine render). Same rationale as running
# the cascade in-Session. `layout` depends only on `dom` + `style` — no cycle back through `js`.
layout = { path = "../layout" }
# Pure-Rust TrueType metrics (already used by the engine's painter) so in-Session layout can MEASURE
# text with the same system fonts the engine paints with.
fontdue = "0.9"
# HTML parsing, so the `innerHTML` setter can build real child nodes from markup.
html = { path = "../html" }
# The software canvas 2D rasterizer (a leaf crate, no internal deps), so OffscreenCanvas can
# synchronously rasterize its display list for getImageData/convertToBlob/transferToImageBitmap.
paint = { path = "../paint" }
# Our from-scratch WHATWG URL parser (no external url/idna dependency).
wurl = { path = "../wurl" }

[lints]
workspace = true
